--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,43 @@
     </button>
     <!--end de Botões de Ação-->
     </div>
+    <footer class="container-fluid text-white bg-dark">
+      <div class="row pt-5 pb-5">
+        <section class="col-md-5 mb-5">
+          <h5>Albúm</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a href="#" class="nav-link text-white">Baby</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link text-white">Models</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link text-white">Family</a>
+            </li>
+          </ul>
+        </section>
+        <section class="col-md-5">
+          <h5>Contato</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="tel:+5513111111">tel:(21)9 9999-9999</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white"
+                href="https://api.whatsapp.com/send?phone=5521999999999&text=Ol%C3%A1%2C%20entre%20em%20contato%20"
+                target="blank">WhatsApp:(21)
+                9 9999-9999</a>
+            </li>
+          </ul>
+        </section>
+        <section class="col-md-2">
+          <a href="#" class="text-white">Voltar ao Topo!</a>
+        </section>
+
+
+      </div>
+    </footer>
     <!-- Optional JavaScript-->
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
